spec/errors/core/send_no_such_message.lang
obj = Object.new()
obj.send("invalidSlot")
